--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ng2-nouislider": "1.7.11",
     "ng2-select": "2.0.0",
     "ngx-chips": "1.9.2",
+    "ngx-image-cropper": "^1.2.2",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.1",
