--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,32 @@
   "newProjectRoot": "projects",
   "projects": {
     "md-pro-angular-cli": {
+      "apps": [{
+        "name": "app1",
+        "root": "src",
+        "outDir": "dist",
+        "assets": [
+          "assets",
+          "favicon.ico"
+        ],
+        "index": "index.html",
+        "main": "main-resolver.ts",
+        "polyfills": "polyfills.ts",
+        "test": "test.ts",
+        "tsconfig": "tsconfig.app.json",
+        "testTsconfig": "tsconfig.spec.json",
+        "prefix": "app",
+        "styles": [
+          "styles.css",
+          "../node_modules/@angular/material/core/theming/prebuilt/indigo-pink.css"
+        ],
+        "scripts": [],
+        "environmentSource": "environments/environment.ts",
+        "environments": {
+          "dev": "environments/environment.ts",
+          "prod": "environments/environment.prod.ts"
+        }
+      }],
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -20,6 +46,8 @@
               "src/assets",
               "src/favicon.ico"
             ],
+
+
             "styles": [
               "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
               "node_modules/angular-calendar/scss/angular-calendar.scss",
@@ -64,12 +92,10 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ]
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environments/environment.prod.ts"
+              }]
             }
           }
         },
