--- a/package.json
+++ b/package.json
@@ -71,9 +71,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.3",
-    "@angular/cli": "6.0.3",
     "@angular/compiler-cli": "6.0.2",
+    "@angular-devkit/build-angular": "0.6.3",
+    "typescript": "~2.7.0",
+    "@angular/cli": "6.0.3",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
     "@types/jasmine": "2.5.38",
@@ -90,7 +91,6 @@
     "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "^5.3.2",
     "ts-node": "2.0.0",
-    "tslint": "5.9.1",
-    "typescript": "~2.7.0"
+    "tslint": "5.9.1"
   }
 }
